@@ -50,7 +50,9 @@ Changes log
  - Added JAXB 2.0 and StAX 1.0 libraries.
  - Added a Template.getVariableNames() method. Suggested by Stian Soiland.
  - Added new Dimension.AUTHORIZATION enum entry. Suggested by Stian Soiland.
- 
+ - Optimized the Resource handling of conditional gets. If the conditions are not met, the
+   getRepresentation(Variant) method is never invoked. Suggested by Stian Soiland.
+
 [Misc]
  - Removed AsyncWeb connector, to be replaced by a custom MINA based one.
  - Removed Jetty 5 connector from the code base. Jetty 6 connector is stable enough now.
